Add man pages section

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -49,8 +49,10 @@ markdown_extensions:
   - pymdownx.mark
   - attr_list
   - pymdownx.emoji:
-      emoji_index: !!python/name:materialx.emoji.twemoji
-      emoji_generator: !!python/name:materialx.emoji.to_svg
+      # emoji_index: !!python/name:materialx.emoji.twemoji
+      # emoji_generator: !!python/name:materialx.emoji.to_svg
+      emoji_index: !!python/name:material.extensions.emoji.twemoji
+      emoji_generator: !!python/name:material.extensions.emoji.to_svg
 
 copyright: |
   &copy; 2024-2025 <a href="https://github.com/jimmyjayp"  target="_blank" rel="noopener">James Price</a> - <a href="https://www.mkdocs.org" target="_blank" rel="noopener">This guide was created with <strong>mkdocs</strong>.</a>
